force-app/main/default/objects/Avatar_Result_Mapping_Temp__c/Avatar_Result_Mapping_Temp__c.object-meta.xml
<CustomObject>
    <label>Avatar Result Mapping Temp</label>
    <nameField>
        <displayFormat>ARMT-{0000000000}</displayFormat>
        <label>Avatar Result Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avatar Result Mapping Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>