force-app/main/default/objects/Avatar_Result_Mapping_Temp__c/fields/Answer_Flow__c.field-meta.xml
<CustomField>
    <fullName>Answer_Flow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>