force-app/main/default/objects/Avatar_Result_Mapping_Temp__c/fields/Avatar_Master__c.field-meta.xml
<CustomField>
    <fullName>Avatar_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Avatar Master</label>
    <referenceTo>Avatar_Master__c</referenceTo>
    <relationshipLabel>Avatar Result Mapping Temp</relationshipLabel>
    <relationshipName>Avatar_Result_Mapping_Temp</relationshipName>
    <type>Lookup</type>
</CustomField>