force-app/main/default/objects/Avatar_Result_Mapping_Temp__c/fields/unique__c.field-meta.xml
<CustomField>
    <fullName>unique__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>